2003-02-07  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/System.cpp,
          src/openvrml/OpenVRML/System.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Moved
          System::time functionality to Browser::getCurrentTime
          function.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/nodeptr.cpp,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/script.h,
          src/openvrml/OpenVRML/vrml97node.cpp:  Added shutdown member
          function to Node, Scene.

2003-01-27  Thomas Flynn  <tflynn@users.sourceforge.net>

        * doc/conformance.doc: Update conformance test results.

2003-01-26  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlMatrix.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.cpp:  Added constructor to
          take a 16-value float array.  Added a setRotate method to
          create a rotation matrix from a Quaternion.

        * src/openvrml/OpenVRML/quaternion.cpp,
          src/openvrml/OpenVRML/quaternion.h:  Added set method to set
          the quaternion value from a 4-element float array.

        * src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/OpenGLEvent.cpp,
          src/openvrml-gl/OpenVRML/GL/OpenGLEvent.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Modified
          quaternion manipulation code to use Quaternion class.
          Consolidated trackball functions in ViewerOpenGL.cpp; this
          obsoletes OpenGLEvent.cpp and OpenGLEvent.h.

2003-01-25  Braden McDaniel  <braden@endoframe.com>
