@@ -1,3 +1,9 @@
+2003-02-08  Braden McDaniel  <braden@endoframe.com>
+
+        * src/openvrml/OpenVRML/vrml97node.cpp,
+          src/openvrml/OpenVRML/vrml97node.h:  Bound node stacks should
+          not have owning pointers.
+
 2003-02-07  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/System.cpp,
